# adx

./: .git-blame-ignore-revs  .gitattributes  .gitignore  Cargo.toml  HACKING.md  README.md  deny.toml  dist-workspace.toml  flake.nix  impure.nix  index.html  oranda.json  release.toml  rust-toolchain.toml  rustfmt.toml  shell.nix  update_repo.py
.github/: dependabot.yml  renovate.json
.github/workflows/: cd.yml  release.yml  test.yml  web.yml
adx/: Cargo.toml
adx/src/: channel.rs  exclusions.rs  main.rs  package.rs  parse.rs  stats_alloc.rs  version.rs
adx/src/snapshots/: adx__test__cli_help.snap  adx__test__cli_inclusions_groups.snap  adx__test__cli_inclusions_modules.snap  adx__test__cli_search.snap  adx__test__cli_search_no_results.snap  adx__test__cli_search_stable.snap
adx/wix/: main.wxs
offline-copy/androidx.ads/: group-index.xml
offline-copy/androidx.benchmark/: group-index.xml
offline-copy/androidx.biometric/: group-index.xml
offline-copy/androidx.browser/: group-index.xml
offline-copy/androidx.camera/: group-index.xml
offline-copy/androidx.collection/: group-index.xml
offline-copy/androidx.concurrent/: group-index.xml
offline-copy/androidx.contentpager/: group-index.xml
offline-copy/androidx.databinding/: group-index.xml
offline-copy/androidx.documentfile/: group-index.xml
offline-copy/androidx.emoji/: group-index.xml
offline-copy/androidx.enterprise/: group-index.xml
offline-copy/androidx.exifinterface/: group-index.xml
offline-copy/androidx.fragment/: group-index.xml
offline-copy/androidx.heifwriter/: group-index.xml
offline-copy/androidx.leanback/: group-index.xml
offline-copy/androidx.media/: group-index.xml
offline-copy/androidx.media2/: group-index.xml
offline-copy/androidx.mediarouter/: group-index.xml
offline-copy/androidx.navigation/: group-index.xml
offline-copy/androidx.paging/: group-index.xml
offline-copy/androidx.recyclerview/: group-index.xml
offline-copy/androidx.room/: group-index.xml
offline-copy/androidx.security/: group-index.xml
offline-copy/androidx.sharetarget/: group-index.xml
offline-copy/androidx.slidingpanelayout/: group-index.xml
offline-copy/androidx.test.services/: group-index.xml
offline-copy/androidx.tvprovider/: group-index.xml
offline-copy/androidx.ui/: group-index.xml
offline-copy/androidx.versionedparcelable/: group-index.xml
offline-copy/androidx.wear/: group-index.xml
offline-copy/androidx.webkit/: group-index.xml
offline-copy/androidx.work/: group-index.xml
src/: channel.rs  main.rs  package.rs  parse.rs  project.rs  stability.rs
testdata/: android.arch.persistence.xml  android.arch.work.xml  androidx.activity.xml  androidx.ads.xml  androidx.annotation.xml  androidx.appfunctions.xml  androidx.appsearch.xml  androidx.arch.core.xml  androidx.asynclayoutinflater.xml  androidx.autofill.xml  androidx.baselineprofile.apptarget.xml  androidx.baselineprofile.consumer.xml  androidx.baselineprofile.producer.xml  androidx.baselineprofile.xml  androidx.benchmark.xml  androidx.biometric.xml  androidx.bluetooth.xml  androidx.browser.xml  androidx.camera.featurecombinationquery.xml  androidx.camera.media3.xml  androidx.camera.viewfinder.xml  androidx.camera.xml  androidx.car.app.xml  androidx.collection.xml  androidx.compose.animation.xml  androidx.compose.compiler.xml  androidx.compose.foundation.xml  androidx.compose.material.xml  androidx.compose.material3.adaptive.xml  androidx.compose.material3.xml  androidx.compose.runtime.xml  androidx.compose.ui.xml  androidx.compose.xml  androidx.concurrent.xml  androidx.constraintlayout.xml  androidx.coordinatorlayout.xml  androidx.core.uwb.xml  androidx.core.xml  androidx.credentials.providerevents.xml  androidx.credentials.registry.xml  (+243 more)
testdata/androidx.activity/: group-index.xml
testdata/androidx.asynclayoutinflater/: group-index.xml
testdata/androidx.autofill/: group-index.xml
testdata/androidx.car/: group-index.xml
testdata/androidx.compose/: group-index.xml
testdata/androidx.cursoradapter/: group-index.xml
testdata/androidx.customview/: group-index.xml
testdata/androidx.databinding/: group-index.xml
testdata/androidx.drawerlayout/: group-index.xml
testdata/androidx.enterprise/: group-index.xml
testdata/androidx.interpolator/: group-index.xml
testdata/androidx.leanback/: group-index.xml
testdata/androidx.loader/: group-index.xml
testdata/androidx.navigation/: group-index.xml
testdata/androidx.percentlayout/: group-index.xml
testdata/androidx.print/: group-index.xml
testdata/androidx.recommendation/: group-index.xml
testdata/androidx.recyclerview/: group-index.xml
testdata/androidx.remotecallback/: group-index.xml
testdata/androidx.savedstate/: group-index.xml
testdata/androidx.sqlite/: group-index.xml
testdata/androidx.test.espresso.idling/: group-index.xml
testdata/androidx.test.janktesthelper/: group-index.xml
testdata/androidx.test.uiautomator/: group-index.xml
testdata/androidx.textclassifier/: group-index.xml
testdata/androidx.transition/: group-index.xml
testdata/androidx.viewpager/: group-index.xml
testdata/androidx.viewpager2/: group-index.xml
testdata/androidx.work/: group-index.xml
xtask/: Cargo.toml
xtask/src/: main.rs
