[package]
name = "adx"
version = "2.1.2-alpha.0"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Poll Google's Maven repository to fetch the latest versions of AndroidX packages"
repository = "https://github.com/msfjarvis/androidx-release-watcher"
homepage = "https://github.com/msfjarvis/androidx-release-watcher"
keywords = ["maven", "androidx"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
clap = "2.33.3"
indicatif = "0.15.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
roxmltree = "0.13.0"
ureq = "1.5.0"

[badges]
maintenance = { status = "actively-developed" }
