[package]
name = "adx"
version = "3.0.1-alpha01"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Poll Google's Maven repository to fetch the latest versions of AndroidX packages"
repository = "https://github.com/msfjarvis/androidx-release-watcher"
homepage = "https://github.com/msfjarvis/androidx-release-watcher"
keywords = ["maven", "androidx"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
clap = "3.0.0-beta.2"
indicatif = "0.15.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
roxmltree = { version = "0.14.0", features = ["std"] }
semver = "0.11.0"
thiserror = "1.0.23"
ureq = "1.5.4"

[badges]
maintenance = { status = "actively-developed" }
