[package]
name = "adx"
version = "4.5.1"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Poll Google's Maven repository to fetch the latest versions of AndroidX packages"
repository = "https://github.com/msfjarvis/androidx-release-watcher"
homepage = "https://github.com/msfjarvis/androidx-release-watcher"
keywords = ["maven", "androidx"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["color", "deprecated", "derive"] }
color-eyre = { version = "0.6.2", default-features = false }
futures = "0.3.28"
reqwest = { version = "0.11.21", default-features = false, features = [
  "rustls-tls",
] }
roxmltree = { version = "0.18.1", features = ["std"] }
semver = "1.0.19"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[badges]
maintenance = { status = "actively-developed" }

[features]
measure-alloc = []
