[package]
name = "adx"
version = "4.5.3"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Poll Google's Maven repository to fetch the latest versions of AndroidX packages"
repository = "https://github.com/msfjarvis/androidx-release-watcher"
homepage = "https://github.com/msfjarvis/androidx-release-watcher"
keywords = ["maven", "androidx"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["color", "deprecated", "derive"] }
color-eyre = { version = "0.6.3", default-features = false }
futures = "0.3.30"
reqwest = { version = "0.12.2", default-features = false, features = [
  "rustls-tls",
] }
roxmltree = { version = "0.19.0", features = ["std"] }
semver = "1.0.22"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[badges]
maintenance = { status = "actively-developed" }

[features]
measure-alloc = []

[dev-dependencies]
insta-cmd = "0.5.0"
