[package]
name = "adx"
version = "5.1.0"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2024"
license = "MIT/Apache-2.0"
description = "Poll Google's Maven repository to fetch the latest versions of AndroidX packages"
repository = "https://github.com/msfjarvis/androidx-release-watcher"
homepage = "https://github.com/msfjarvis/androidx-release-watcher"
keywords = ["maven", "androidx"]
readme = "../README.md"

[package.metadata.wix]
upgrade-guid = "5DC39FB8-D56C-487A-B63D-3EF7915BEBF5"
path-guid = "F3357E63-B623-4603-A3FE-FE1E5AEB4B82"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["color", "deprecated", "derive"] }
color-eyre = { version = "0.6.3", default-features = false }
futures = "0.3.30"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
] }
roxmltree = { version = "0.20.0", features = ["std"] }
semver = "1.0.22"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[badges]
maintenance = { status = "actively-developed" }

[features]
nix-check = []

[dev-dependencies]
insta-cmd = "0.6.0"
